// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproErrorTemplate > Snapshots > renders the component with all properties filled in 1`] = `
<div
  class="amelipro-error-template"
  id="modified-unique-id-container"
>
  <amelipro-card-stub
    bordercolor="ap-grey-lighten-2"
    bordered="true"
    cardcolor="ap-white"
    classes="amelipro-error-template__card"
    divider="false"
    headerrightwidth="50%"
    nocardheader="false"
    rightpart="false"
    rightpartwidth="25%"
    titlecolor="ap-grey-darken-1"
    titlelevel="2"
    uniqueid="modified-unique-id-card"
  ></amelipro-card-stub>
</div>
`;

exports[`AmeliproErrorTemplate > Snapshots > renders the component with only required properties filled in 1`] = `
<div class="amelipro-error-template">
  <amelipro-card-stub
    bordercolor="ap-grey-lighten-2"
    bordered="true"
    cardcolor="ap-white"
    classes="amelipro-error-template__card"
    divider="false"
    headerrightwidth="50%"
    nocardheader="false"
    rightpart="false"
    rightpartwidth="25%"
    titlecolor="ap-grey-darken-1"
    titlelevel="2"
  ></amelipro-card-stub>
</div>
`;
